--- a/CSS/home_styles.css
+++ b/CSS/home_styles.css
@@ -19,6 +19,7 @@ body, html {
         justify-content: center;
         height: 100%;
         background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Immagini/Background/background_9.jpg") no-repeat center center fixed;
+        background-size: cover;
     }
 
     .over-text{
