--- a/CSS/home_styles.css
+++ b/CSS/home_styles.css
@@ -27,7 +27,6 @@ body, html {
         flex-direction: column;
         gap: 10px;
         margin: 100px auto 0 auto;
-        animation: fadeIn 1.5s ease;
         width: 70%;
         height: 40%;
     }
@@ -104,7 +103,6 @@ body, html {
         text-align: center;
         font-size: 17px;
         color: #F0B357;
-        animation: fadeIn 1.5s ease;
     }
 
     .icon_bussines_space{
@@ -254,6 +252,11 @@ body, html {
         cursor:pointer;
     }
 
+    #chiSiamo .descrizione_sezione .btn_chisiamo:hover{
+        color: rgba(119,4,4,1);
+        background-color: white;
+    }
+
     @media (min-width: 600px){
 
         #chiSiamo {
@@ -394,14 +397,20 @@ body, html {
     #showroom .descrizione_sezione .btn_showroom{
         display: block;
         font-family: 'Montserrat';
-        font-size: 16px;
+        font-size: 14px;
         color: #770404;
         font-weight: bold;
         background-color: rgba(255,255,255,1);
-        padding: 15px 10px 15px 10px;
+        padding: 15px 8px 15px 8px;
         margin: 20px auto 20px auto;
-        border: none;
+        border: white solid 2px;
         cursor:pointer;
+    }
+
+    #showroom .descrizione_sezione .btn_showroom:hover{
+        color: white;
+        background-color: #770404;
+        border: white solid 2px;
     }
 
     @media (min-width: 600px){
@@ -558,15 +567,22 @@ body, html {
     #prodotti .descrizione_sezione .btn_prodotti{
         display: block;
         font-family: 'Montserrat';
-        font-size: 18px;
+        font-size: 14px;
         color: white;
         font-weight: bold;
         background-color: rgba(119,4,4,1);
-        padding: 10px 20px 10px 20px;
+        padding: 13px 20px 13px 20px;
         margin: 20px auto 20px auto;
         border: none;
         cursor:pointer;
     }
+
+    #prodotti .descrizione_sezione .btn_prodotti:hover{
+        color: rgba(119,4,4,1);
+        background-color: white;
+    }
+
+
 
     @media (min-width: 600px){
 
