--- a/CSS/home_styles.css
+++ b/CSS/home_styles.css
@@ -18,7 +18,7 @@ body, html {
         align-items: center;
         justify-content: center;
         height: 100%;
-        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Immagini/Background/background_9.jpg") no-repeat center center fixed;
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Immagini/Background/mobile/background_9_mobile.jpg") no-repeat center center fixed;
         background-size: cover;
     }
 
@@ -66,6 +66,11 @@ body, html {
     }
 
     @media (min-width: 1024px) {
+
+        .main_img{
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Immagini/Background/desktop/background_9.jpg") no-repeat center center fixed;
+        }
+
         .frase_space{
             width: 80%;
         }
