--- a/CSS/home_styles.css
+++ b/CSS/home_styles.css
@@ -18,7 +18,7 @@ body, html {
         align-items: center;
         justify-content: center;
         height: 100%;
-        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Immagini/Background/mobile/background_9_mobile.jpg") no-repeat center center fixed;
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Immagini/Background/background_9.jpg") no-repeat center center;
         background-size: cover;
     }
 
@@ -68,7 +68,8 @@ body, html {
     @media (min-width: 1024px) {
 
         .main_img{
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Immagini/Background/desktop/background_9.jpg") no-repeat center center fixed;
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Immagini/Background/background_9.jpg") no-repeat center center fixed;
+            background-size: cover;
         }
 
         .frase_space{
@@ -175,6 +176,8 @@ body, html {
         flex-wrap: wrap;
         gap: 10px;
         padding: 15% 7% 15% 7%;
+        background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_3.jpg) no-repeat center center;
+        background-size: cover;
     }
 
     #chiSiamo .descrizione_sezione{
@@ -294,6 +297,8 @@ body, html {
             justify-content: center;
             gap: 10px;
             padding: 5% 10% 5% 10%;
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_3.jpg) no-repeat center center fixed;
+            background-size: cover;
         }
 
         #chiSiamo .descrizione_sezione{
@@ -317,6 +322,8 @@ body, html {
             justify-content: center;
             gap: 10px;
             padding: 5% 12% 5% 12%;
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_3.jpg) no-repeat center center fixed;
+            background-size: cover;
         }
 
         #chiSiamo .descrizione_sezione{
@@ -369,6 +376,8 @@ body, html {
         flex-wrap: wrap;
         gap: 0px;
         padding: 0% 0% 0% 0%;
+        background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_3.jpg) no-repeat center center;
+        background-size: cover;
     }
 
     #showroom .immagine_sezione{
@@ -443,6 +452,11 @@ body, html {
 
     @media (min-width: 1024px){
 
+       #showroom{
+           background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_3.jpg) no-repeat center center fixed;
+           background-size: cover;
+       }
+
         #showroom .descrizione_sezione{
             flex-basis: 55%;
             padding: 5% 5% 5% 5%;
@@ -466,6 +480,11 @@ body, html {
     }
 
     @media (min-width: 1920px){
+
+        #showroom{
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_3.jpg) no-repeat center center fixed;
+            background-size: cover;
+        }
 
         #showroom .descrizione_sezione{
             flex-basis: 55%;
@@ -507,6 +526,8 @@ body, html {
         flex-wrap: wrap;
         gap: 10px;
         padding: 15% 7% 15% 7%;
+        background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_3.jpg) no-repeat center center;
+        background-size: cover;
     }
 
     #prodotti .descrizione_sezione{
@@ -620,6 +641,8 @@ body, html {
             justify-content: center;
             gap: 10px;
             padding: 5% 10% 5% 10%;
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_3.jpg) no-repeat center center fixed;
+            background-size: cover;
         }
 
         #prodotti .descrizione_sezione{
@@ -642,6 +665,8 @@ body, html {
             justify-content: center;
             gap: 10px;
             padding: 5% 12% 5% 12%;
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_3.jpg) no-repeat center center fixed;
+            background-size: cover;
         }
 
         #prodotti .descrizione_sezione{
