--- a/CSS/contatti_styles.css
+++ b/CSS/contatti_styles.css
@@ -8,8 +8,11 @@ body, html {
     font-family: sans-serif;
     background-color: #EDEAEA;
     height: 100%;
+    max-width: 100%;
     margin: 0;
     overscroll-behavior-y: none;
+    overflow-x:hidden;
+
 }
 
 /* || Main Image Element Style */
