--- a/CSS/prodotti_style.css
+++ b/CSS/prodotti_style.css
@@ -184,8 +184,52 @@ body, html {
 
     .container_descrizione_prodotto{
         flex-basis: 100%;
-        height: 500px;
         background: #191A1A;
+        padding: 10%;
+        position: relative;
+    }
+
+    .freccia_dietro{
+        display: block;
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        top:50%;
+        transform: translateY(-50%);
+        left: 10px;
+        opacity: 0.5;
+    }
+
+    .freccia_avanti{
+        display: block;
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        top:50%;
+        transform: translateY(-50%);
+        right: 10px;
+        opacity: 0.5;
+    }
+
+    .freccia_dietro:hover{
+        opacity: 1;
+    }
+
+    .freccia_avanti:hover{
+        opacity: 1;
+    }
+
+    .container_descrizione_prodotto h1{
+        font-family: 'Alfa Slab One';
+        font-size: 35px;
+        color: white;
+        margin-bottom: 20px;
+    }
+
+    .container_descrizione_prodotto p{
+        font-family: 'Montserrat';
+        font-size: 18px;
+        color: white;
     }
 
     .container_immagini_prodotto{
@@ -258,6 +302,8 @@ body, html {
 
         .container_descrizione_prodotto{
             flex-basis: 55%;
+            height: 500px;
+            padding: 5%;
         }
 
         .container_immagini_prodotto{
@@ -270,6 +316,14 @@ body, html {
 
         .container_descrizione_prodotto{
             height: 700px;
+        }
+
+        .container_descrizione_prodotto h1{
+            font-size: 40px;
+        }
+
+        .container_descrizione_prodotto p{
+            font-size: 20px;
         }
 
         .container_immagini_prodotto{
