--- a/CSS/showroom_style.css
+++ b/CSS/showroom_style.css
@@ -215,6 +215,11 @@ body, html {
         color: white;
     }
 
+    .campo_form input[type="date"]{
+        -webkit-appearance: none;
+    }
+
+
 
     ::placeholder{
         color: white;
