--- a/CSS/showroom_style.css
+++ b/CSS/showroom_style.css
@@ -216,6 +216,7 @@ body, html {
     }
 
     .campo_form input[type="date"]{
+        background-color: red;
         -webkit-appearance: none;
     }
 
