--- a/CSS/showroom_style.css
+++ b/CSS/showroom_style.css
@@ -139,8 +139,127 @@ body, html {
 
 
 
+/* || Section2 Element Style */
+
+    .section_img{
+        width: 100%;
+        position: relative;
+    }
+
+    .card-mosaic {
+        display: none;
+    }
+
+    .container_img{
+        display: none;
+    }
+
+    .close{
+        display: none;
+    }
+
+    @media (min-width: 600px) {
+
+        .container_img{
+            position: absolute;
+            height: 400px;
+            top: 50%;
+            left:50%;
+            transform: translate(-50%, -50%);
+            background: #D9D9D9;
+            z-index: 3;
+            position: absolute;
+            box-shadow: 5px 5px 10px black;
+            border-radius: 5px;
+            display: none;
+            transition: opacity 1s ease;
+        }
+
+        .close{
+            width: 5%;
+            height: 5%;
+            background: none;
+            color: white;
+            position: absolute;
+            right: 10px;
+            top:10px;
+            border: none;
+            border-radius: 5px;
+            font-family: "Montserrat";
+            font-size: 20px;
+            cursor: pointer;
+            display: block;
+        }
+
+        .card-mosaic{
+            display: grid;
+            width: 100%;
+            gap:10px;
+            grid-template-columns: repeat(auto-fit,minmax(20%,1fr));
+            grid-auto-rows: 150px;
+            background: white;
+            padding: 5% 5% 5% 5%;
+        }
+
+        .card{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            height: 100%;
+            width: 100%;
+            border-radius: 5px;
+            overflow: hidden;
+            transition: all 500ms;
+            padding: 0;
+            margin: 0;
+            /*border: black solid;*/
+        }
+
+        .card-tall{
+            grid-row: span 2 /auto;
+        }
+
+        .card-wide{
+            grid-column: span 2 /auto;
+        }
+
+        .card:hover{
+            transform: scale(1.1);
+            box-shadow: 5px 5px 10px black;
+        }
+
+    }
+
+    @media (min-width: 1024px) {
+
+        .container_img{
+            height: 600px;
+        }
+
+        .close{
+            font-size: 30px;
+        }
+
+
+        .card-mosaic{
+            gap:20px;
+            grid-auto-rows: 230px;
+            padding: 5% 10% 5% 10%;
+        }
+
+    }
+
+/* ... */
+
+
+
 
 /* || Section3 Element Style */
+
 
     .container_vieni_a_trovarci{
         display: flex;
@@ -216,7 +335,6 @@ body, html {
     }
 
     .campo_form input[type="date"]{
-        background-color: red;
         -webkit-appearance: none;
     }
 
@@ -269,10 +387,9 @@ body, html {
         padding: 5%;
         background: white;
         position: absolute;
-        top:40%;
-        /*transform: translateY(-50%);*/
+        top:50%;
         left:50%;
-        transform: translateX(-50%);
+        transform: translate(-50%, -50%);
         text-align: center;
         font-family: 'Montserrat';
         font-size: 18px;
@@ -280,7 +397,7 @@ body, html {
         color: #770404;
         border: #770404 solid 2px;
         box-shadow: 5px 5px 10px black;
-        display: none;
+        /*display: none;*/
     }
 
 
