--- a/CSS/showroom_style.css
+++ b/CSS/showroom_style.css
@@ -158,6 +158,42 @@ body, html {
         display: none;
     }
 
+    @media (max-width: 599px) {
+
+        .container_img_mobile{
+            width: 100%;
+            height: 500px;
+            border: solid black;
+            position: relative;
+        }
+
+        .slider_img{
+            width: 80%;
+            height: 80px;
+            border: solid black;
+            position: absolute;
+            bottom: 40px;
+            left:50%;
+            transform: translateX(-50%);
+            z-index: 3;
+
+            display: block;
+            overflow-x: auto;
+        }
+
+        .element{
+            display: inline-block;
+            width: 25%;
+            height: 100%;
+            border: solid black;
+        }
+
+        .element:hover{
+            transform: translateY(-10px);
+        }
+
+    }
+
     @media (min-width: 600px) {
 
         .container_img{
@@ -359,8 +395,6 @@ body, html {
         -webkit-appearance: none;
     }
 
-
-
     ::placeholder{
         color: white;
         opacity: 0.7;
@@ -424,13 +458,11 @@ body, html {
         animation: fadeIn2 1s ease-out forwards;
     }
 
-
     @keyframes fadeIn2 {
         to {
             opacity: 1;
         }
     }
-
 
     @media (min-width: 600px) {
 
