--- a/CSS/showroom_style.css
+++ b/CSS/showroom_style.css
@@ -158,43 +158,31 @@ body, html {
         display: none;
     }
 
-    @media (max-width: 599px) {
-
-        .container_img_mobile{
-            width: 100%;
-            height: 500px;
-            border: solid black;
-            position: relative;
-        }
-
-        .slider_img{
-            width: 80%;
-            height: 80px;
-            border: solid black;
-            position: absolute;
-            bottom: 40px;
-            left:50%;
-            transform: translateX(-50%);
-            z-index: 3;
-
-            display: block;
-            overflow-x: auto;
-        }
-
-        .element{
-            display: inline-block;
-            width: 25%;
-            height: 100%;
-            border: solid black;
-        }
-
-        .element:hover{
-            transform: translateY(-10px);
-        }
-
+    .container_img_mobile{
+        width: 100%;
+        height: 500px;
     }
 
+    .img_mobile {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+
+        width: 100%;
+        height: 100%;
+        object-fit:contain;
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../Immagini/Prodotti/Porte/porta1.jpeg)
+    }
+
+
     @media (min-width: 600px) {
+
+        .container_img_mobile{
+            display: none;
+        }
 
         .container_img{
             position: absolute;
