--- a/CSS/prodotti_style.css
+++ b/CSS/prodotti_style.css
@@ -194,6 +194,7 @@ body, html {
         background: none;
         flex-basis: 100%;
         padding: 10% 3% 10% 3%;
+        position: relative;
     }
 
     .container_descrizione_prodotto h1{
@@ -210,6 +211,14 @@ body, html {
         font-size: 18px;
         font-weight: lighter;
         color: white;
+    }
+
+    .circle_container_prodotti{
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-top: 30px;
     }
 
     .container_immagini{
@@ -230,6 +239,7 @@ body, html {
         margin-left: auto;
         margin-right: auto;
     }
+
 
     .circle_container_img{
         position: absolute;
