--- a/CSS/prodotti_style.css
+++ b/CSS/prodotti_style.css
@@ -187,6 +187,7 @@ body, html {
         align-items: center;
         justify-content: center;
         background-color: #191A1A;
+        gap: 10px;
 
     }
 
@@ -211,6 +212,7 @@ body, html {
         font-size: 18px;
         font-weight: lighter;
         color: white;
+        margin-bottom: 10px;
     }
 
     .circle_container_prodotti{
@@ -257,6 +259,148 @@ body, html {
         margin: 3px;
     }
 
+    @media (min-width: 600px) {
+
+        .container_categorie{
+            padding: 2% 5% 2% 5%;
+            justify-content: flex-start;
+            column-gap: 20px;
+            row-gap: 5px;
+        }
+
+        .item{
+            flex-basis: 20%;
+            justify-content: start;
+            gap:5px;
+        }
+
+
+        .container_prodotto{
+            display: none;
+            width: 100%;
+            align-items: center;
+            justify-content: center;
+            background-color: #191A1A;
+
+        }
+
+        .container_descrizione_prodotto{
+            background: none;
+            flex-basis: 100%;
+            padding: 5% 5% 5% 5%;
+            position: relative;
+        }
+
+        .container_descrizione_prodotto h1{
+            font-family: 'Alfa Slab One';
+            font-size: 35px;
+            color: white;
+            margin-bottom: 20px;
+        }
+
+        .container_descrizione_prodotto p{
+            font-family: 'Montserrat';
+            font-size: 18px;
+            color: white;
+        }
+
+        .container_immagini{
+            display: none;
+        }
+
+        .mosaico{
+
+            display: grid;
+            flex-basis: 90%;
+            gap:10px;
+            grid-template-columns: repeat(auto-fit,minmax(20%,1fr));
+            grid-auto-rows: 200px;
+            /*padding: 5% 5% 5% 5%;*/
+            margin-bottom: 40px;
+            /*border: white solid;*/
+
+        }
+
+        .card{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            height: 100%;
+            width: 100%;
+            border-radius: 5px;
+            overflow: hidden;
+            transition: all 500ms;
+            padding: 0;
+            margin: 0;
+            /*border: black solid;*/
+
+            opacity: 0;
+            scale: 0;
+            animation: fadeIn 1.5s ease-out forwards;
+
+        }
+
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+                scale: 1;
+            }
+        }
+
+        .card-tall{
+            grid-row: span 2 /auto;
+        }
+
+        .card-wide{
+            grid-column: span 2 /auto;
+        }
+
+        .card:hover{
+            transform: scale(1.1);
+            z-index: 3;
+            box-shadow: 5px 5px 10px black;
+        }
+
+    }
+
+    @media (min-width: 1024px) {
+
+        .container_categorie{
+            padding: 1% 10% 1% 10%;
+            justify-content: center;
+            column-gap: 25px;
+            row-gap: 10px;
+        }
+
+        .item{
+            flex-basis: 10%;
+        }
+
+        .container_prodotto{
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .container_descrizione_prodotto{
+            padding: 5% 10% 5% 10%;
+        }
+
+        .mosaico{
+            flex-basis: 80%;
+            margin-bottom: 80px;
+            grid-auto-rows: 300px;
+        }
+
+
+    }
+
+    @media (min-width: 1920px) {
+
+    }
 
 
 
