--- a/CSS/home_styles.css
+++ b/CSS/home_styles.css
@@ -23,6 +23,8 @@ body, html {
         display: flex;
         align-items: center;
         justify-content: center;
+        width: 100%;
+        max-width: 100%;
         height: 100%;
         background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Immagini/Background/background_9.jpg") no-repeat center center;
         background-size: cover;
@@ -97,6 +99,8 @@ body, html {
 
     .sezione_bussines_block{
         display: flex;
+        width: 100%;
+        max-width: 100%;
         flex-wrap: wrap;
     }
 
@@ -182,6 +186,8 @@ body, html {
 
     #chiSiamo{
         display: flex;
+        width: 100%;
+        max-width: 100%;
         flex-wrap: wrap;
         gap: 10px;
         padding: 15% 7% 15% 7%;
@@ -383,6 +389,8 @@ body, html {
     #showroom{
         display: flex;
         flex-wrap: wrap;
+        width: 100%;
+        max-width: 100%;
         gap: 0px;
         padding: 0% 0% 0% 0%;
         background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_4.jpg) no-repeat center center;
@@ -533,6 +541,8 @@ body, html {
     #prodotti{
         display: flex;
         flex-wrap: wrap;
+        width: 100%;
+        max-width: 100%;
         gap: 10px;
         padding: 15% 7% 15% 7%;
         background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_2.jpg) no-repeat center center;
