--- a/CSS/prodotti_style.css
+++ b/CSS/prodotti_style.css
@@ -259,6 +259,14 @@ body, html {
         margin: 3px;
     }
 
+    .btn_back{
+        display: none;
+    }
+
+    .btn_next {
+        display: none;
+    }
+
     @media (min-width: 600px) {
 
         .container_categorie{
@@ -383,6 +391,39 @@ body, html {
         .container_prodotto{
             flex-wrap: wrap;
             justify-content: center;
+            position: relative;
+        }
+
+        .btn_back{
+            display: block;
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            top:150px;
+            left:50px;
+            opacity: 0.5;
+            cursor: pointer;
+            z-index: 3;
+        }
+
+        .btn_next {
+            display: block;
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            top:150px;
+            right:50px;
+            opacity: 0.5;
+            cursor: pointer;
+            z-index: 3;
+        }
+
+        .btn_back:hover{
+            opacity: 1;
+        }
+
+        .btn_next:hover{
+            opacity: 1;
         }
 
         .container_descrizione_prodotto{
