--- a/CSS/home_styles.css
+++ b/CSS/home_styles.css
@@ -28,7 +28,9 @@ body, html {
         height: 100%;
         background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Immagini/Background/background_9.jpg") no-repeat center center;
         background-size: cover;
+        position: relative;
     }
+
 
     .over-text{
         display: flex;
@@ -37,6 +39,8 @@ body, html {
         margin: 100px auto 0 auto;
         width: 70%;
         height: 40%;
+        opacity: 0;
+        transition: opacity 1s ease;
     }
 
     .logo_grande{
