--- a/CSS/navbar_style.css
+++ b/CSS/navbar_style.css
@@ -18,6 +18,11 @@
     margin-left: 2%;
 }
 
+.logo{
+    width: 100%;
+    height: 100%;
+}
+
 .hamburger {
     display: flex;
     flex-direction: column;
