--- a/CSS/home_styles.css
+++ b/CSS/home_styles.css
@@ -12,6 +12,7 @@ body, html {
     margin: 0;
     overscroll-behavior-y: none;
     overscroll-behavior-x: none;
+    -webkit-overflow-scrolling: unset;
 }
 
 
