--- a/CSS/home_styles.css
+++ b/CSS/home_styles.css
@@ -34,6 +34,7 @@ body, html {
         background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Immagini/Background/background_9.jpg") no-repeat center center;
         background-size: cover;
         position: relative;
+        overflow: hidden;
     }
 
 
