--- a/CSS/home_styles.css
+++ b/CSS/home_styles.css
@@ -282,6 +282,7 @@ body, html {
         margin: 20px auto 20px auto;
         border: none;
         cursor:pointer;
+        box-shadow: 5px 5px 10px black;
     }
 
     #chiSiamo .descrizione_sezione .btn_chisiamo:hover{
@@ -446,6 +447,7 @@ body, html {
         margin: 20px auto 20px auto;
         border: white solid 2px;
         cursor:pointer;
+        box-shadow: 5px 5px 10px black;
     }
 
     #showroom .descrizione_sezione .btn_showroom:hover{
@@ -630,6 +632,7 @@ body, html {
         margin: 20px auto 20px auto;
         border: none;
         cursor:pointer;
+        box-shadow: 5px 5px 10px black;
     }
 
     #prodotti .descrizione_sezione .btn_prodotti:hover{
